crates/runtime/src/model/snapshots/runtime__model__tool_use__tests__insert_initial_tools_empty_messages.snap
---
source: crates/runtime/src/model/tool_use.rs
expression: result
snapshot_kind: text
---
[
  {
    "role": "assistant",
    "tool_calls": [
      {
        "type": "function",
        "id": "test_id",
        "function": {
          "name": "list_datasets",
          "arguments": "{}"
        }
      }
    ]
  },
  {
    "role": "tool",
    "content": "dataset1, dataset2",
    "tool_call_id": "test_id"
  }
]
