crates/runtime/src/model/snapshots/runtime__model__tool_use__tests__insert_initial_tools_skips_if_tool_already_exists.snap
---
source: crates/runtime/src/model/tool_use.rs
expression: result
snapshot_kind: text
---
[
  {
    "role": "system",
    "content": "You are a helpful assistant"
  },
  {
    "role": "user",
    "content": "Hello"
  },
  {
    "role": "assistant",
    "tool_calls": [
      {
        "type": "function",
        "id": "test_id",
        "function": {
          "name": "list_datasets",
          "arguments": "{}"
        }
      }
    ]
  }
]
