crates/runtime/src/model/snapshots/runtime__model__tool_use__tests__insert_initial_tools_with_different_tool_name.snap
---
source: crates/runtime/src/model/tool_use.rs
expression: result
snapshot_kind: text
---
[
  {
    "role": "system",
    "content": "You are a helpful assistant"
  },
  {
    "role": "assistant",
    "tool_calls": [
      {
        "type": "function",
        "id": "test_id",
        "function": {
          "name": "list_datasets",
          "arguments": "{}"
        }
      }
    ]
  },
  {
    "role": "tool",
    "content": "dataset1, dataset2",
    "tool_call_id": "test_id"
  },
  {
    "role": "assistant",
    "tool_calls": [
      {
        "type": "function",
        "id": "other_id",
        "function": {
          "name": "other_tool",
          "arguments": "{}"
        }
      }
    ]
  }
]
