crates/runtime/src/model/snapshots/runtime__model__tool_use__tests__insert_initial_tools_with_system_and_user_messages.snap
---
source: crates/runtime/src/model/tool_use.rs
expression: result
snapshot_kind: text
---
[
  {
    "role": "system",
    "content": "You are a helpful assistant"
  },
  {
    "role": "user",
    "content": "Hello"
  },
  {
    "role": "assistant",
    "tool_calls": [
      {
        "id": "test_id",
        "type": "function",
        "function": {
          "name": "list_datasets",
          "arguments": "{}"
        }
      }
    ]
  },
  {
    "role": "tool",
    "content": "dataset1, dataset2",
    "tool_call_id": "test_id"
  }
]
